# pydantic-ai-demos

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
pydantic_demos/: run_hello_world_workflow.py  run_interactive_research_workflow.py  run_research_workflow.py  run_streaming_workflow.py  run_tools_workflow.py  run_worker.py
pydantic_demos/workflows/: hello_world_workflow.py  interactive_research_manager.py  interactive_research_workflow.py  research_bot_workflow.py  simple_research_manager.py  tools_workflow.py
pydantic_demos/workflows/research_agents/: README.md  __init__.py  clarifying_agent.py  pdf_generator_agent.py  planner_agent.py  search_agent.py  triage_agent.py  writer_agent.py
